# hydro

./: .gitignore  .goosehints  CHANGELOG.md  README.md  wokwi.toml
controller/: Cargo.toml  cfg.toml  diagram.json  wokwi.toml
controller/.devcontainer/: devcontainer.json
controller/docs/: README.md
controller/scripts/: flash.sh
controller/src/: display.rs  main.rs  message.rs  status.rs
hydro-controller/: .goosehints  Cargo.toml
hydro-controller/schematics/: #auto_saved_files#  schematics.kicad_pro  schematics.kicad_sch  ~schematics.kicad_sch.lck
